// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSteps renders step title inside "headingElement" element 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStep__circle"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 1
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          1
        </span>
      </span>
      <h2
        class="euiTitle euiStep__title css-1mr6cet-euiTitle-s"
      >
        first title
      </h2>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStep__circle"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 2
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          2
        </span>
      </span>
      <h2
        class="euiTitle euiStep__title css-1mr6cet-euiTitle-s"
      >
        second title
      </h2>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 3 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          3
        </span>
      </span>
      <h2
        class="euiTitle euiStep__title css-1mr6cet-euiTitle-s"
      >
        third title
      </h2>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStep__circle"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 1
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          1
        </span>
      </span>
      <p
        class="euiTitle euiStep__title css-1mr6cet-euiTitle-s"
      >
        first title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStep__circle"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 2
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          2
        </span>
      </span>
      <p
        class="euiTitle euiStep__title css-1mr6cet-euiTitle-s"
      >
        second title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 3 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          3
        </span>
      </span>
      <p
        class="euiTitle euiStep__title css-1mr6cet-euiTitle-s"
      >
        third title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps with firstStepNumber 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStep__circle"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 10
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          10
        </span>
      </span>
      <p
        class="euiTitle euiStep__title css-1mr6cet-euiTitle-s"
      >
        first title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStep__circle"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 11
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          11
        </span>
      </span>
      <p
        class="euiTitle euiStep__title css-1mr6cet-euiTitle-s"
      >
        second title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 12 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          12
        </span>
      </span>
      <p
        class="euiTitle euiStep__title css-1mr6cet-euiTitle-s"
      >
        third title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps with titleSize 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep euiStep--small"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStep__circle euiStepNumber--small"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 1
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          1
        </span>
      </span>
      <p
        class="euiTitle euiStep__title css-1c9cwui-euiTitle-xs"
      >
        first title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep euiStep--small"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStep__circle euiStepNumber--small"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 2
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          2
        </span>
      </span>
      <p
        class="euiTitle euiStep__title css-1c9cwui-euiTitle-xs"
      >
        second title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep euiStep--small"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle euiStepNumber--small"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Step 3 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          3
        </span>
      </span>
      <p
        class="euiTitle euiStep__title css-1c9cwui-euiTitle-xs"
      >
        third title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;
